fixes alignment of spinner, adds option for requirements.txt in file upload

--- a/assets/stylesheets/analysis.scss
+++ b/assets/stylesheets/analysis.scss
@@ -13,9 +13,6 @@
 .stack-spinner {
     display: inline-block;
 }
-.view-report {
-    margin-left: 50px;
-}
 .list-view-pf-description {
     width: 100%;
 }
